--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,10 @@
 language: scala
-script: "sbt scripted"
+sudo: false
+script:
+- sbt "^^${SBT_VERSION}" test scripted
+matrix:
+  include:
+  - env: SBT_VERSION="0.13.15"
+    jdk: openjdk7
+  - env: SBT_VERSION="1.0.0-RC2"
+    jdk: oraclejdk8
